cache needs log-implementation

--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -61,7 +61,7 @@ RUN echo "Cja: $(cat /cre/tmp/php/packages/composer.json)"
 RUN echo "Cjr: $(cat ./composer.json)"
 RUN echo "LS: $(ls -l /cre/tmp/php/packages/)"
 
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/cache
+
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/di
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/rbac
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/view  
@@ -121,6 +121,9 @@ RUN composer require --prefer-stable --update-with-all-dependencies psr/http-fac
 RUN composer require --prefer-stable --update-with-all-dependencies psr/http-message
 RUN composer require --prefer-stable --update-with-all-dependencies psr/http-server-handler
 RUN composer require --prefer-stable --update-with-all-dependencies psr/http-server-middleware
+
+#
+RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/cache
 
 #Real conflicts with yii2
 #RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-core
