--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -63,9 +63,6 @@ RUN echo "LS: $(ls -l /cre/tmp/php/packages/)"
 
 
 
-RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/view  
-
-
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-web
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-cli
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-api
@@ -130,9 +127,10 @@ RUN composer require --prefer-stable --update-with-all-dependencies psr/http-ser
 
 ###Conflicts with php<7.2
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/di
+RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/view 
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/log 
 
-# psr/log-implementation -> yiisoft/log
+# psr/log-implementation -> requires yiisoft/log
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/cache
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/rbac
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/db
