--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -63,7 +63,7 @@ RUN echo "LS: $(ls -l /cre/tmp/php/packages/)"
 
 
 
-RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-web
+
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-cli
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-api
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-dataview
@@ -125,9 +125,15 @@ RUN composer require --prefer-stable --update-with-all-dependencies psr/http-ser
 ###Possible conflicts with yii2
 
 
+RUN if [ $PHP_VERSION -lt 7.2 ] ; then echo "old php" ; else echo "new php"; fi
+
 ###Conflicts with php<7.2
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/di
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/view 
+
+RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-web
+
+
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/log 
 
 # psr/log-implementation -> requires yiisoft/log
