--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -62,8 +62,6 @@ RUN echo "Cjr: $(cat ./composer.json)"
 RUN echo "LS: $(ls -l /cre/tmp/php/packages/)"
 
 
-
-RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap3
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-jquery
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-console
 
@@ -114,11 +112,6 @@ RUN composer require --prefer-stable --update-with-all-dependencies psr/http-ser
 RUN composer require --prefer-stable --update-with-all-dependencies psr/http-server-middleware
 
 
-#Real conflicts with yii2
-#RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-core
-
-###Possible conflicts with yii2
-
 
 RUN if [ $PHP_VERSION -lt 7.2 ] ; then echo "old php" && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2  && \ 
@@ -129,11 +122,13 @@ RUN if [ $PHP_VERSION -lt 7.2 ] ; then echo "old php" && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/cache && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/rbac && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/db && \
+ composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-core && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-web && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-cli && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-api && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-dataview && \
- composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap4 && \
+ composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap4 && \ 
+ composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap3 && \      
 
 
 ; fi
