--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -63,7 +63,7 @@ RUN echo "LS: $(ls -l /cre/tmp/php/packages/)"
 
 
 
-RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-console
+
 
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/log-target-file
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/log-target-db 
@@ -130,6 +130,7 @@ RUN if [ $PHP_VERSION -lt 7.2 ] ; then echo "old php" && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap4 && \ 
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap3 && \      
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-jquery && \
+ composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-console && \
 
 ; fi
 
