--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -63,11 +63,6 @@ RUN echo "LS: $(ls -l /cre/tmp/php/packages/)"
 
 
 
-
-
-RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/log-target-file
-RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/log-target-db 
-
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-dataview 
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-captcha
 RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-masked-input
@@ -131,6 +126,8 @@ RUN if [ $PHP_VERSION -lt 7.2 ] ; then echo "old php" && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap3 && \      
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-jquery && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-console && \
+ composer require --prefer-stable --update-with-all-dependencies yiisoft/log-target-file && \
+ composer require --prefer-stable --update-with-all-dependencies yiisoft/log-target-db && \ 
 
 ; fi
 
