--- a/crePhpYii3/Dockerfile
+++ b/crePhpYii3/Dockerfile
@@ -1,6 +1,6 @@
 # Adapted from 
-#FROM tamboraorg/crephpdev:2012.0 
-FROM tamboraorg/crephppackages:2012.0
+FROM tamboraorg/crephpdev:2012.0 
+#FROM tamboraorg/crephppackages:2012.0
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
 ARG BUILD_YEAR=2011
