jquery - yii2 only

--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -75,7 +75,8 @@ RUN composer require --prefer-stable --update-with-all-dependencies psr/http-ser
 
 
 RUN if [ $(echo " $PHP_VERSION < 7.2" | bc) -eq 1 ] ; then echo "old php" && \
- composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2 \ 
+ composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2 && \
+ composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap \ 
 ; else echo "new php" && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/di && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/view && \ 
@@ -134,8 +135,6 @@ RUN if [ $(echo " $PHP_VERSION < 7.2" | bc) -eq 1 ] ; then echo "old php" && \
 ##RUN composer require --prefer-stable --update-with-all-dependencies psr/http-message-implementation
 
 ## real fails yii2 - not exist
-##RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap3
-RUN composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap
 # RUN composer require --prefer-stable --update-with-all-dependencies codeception/specify
 
 # yii2
